Archive/19995e662e850c02229516d6fb795747-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main()':
main.cpp:22:30: error: 'ndl' is not a member of 'std'
     std::cout << sentence << std::ndl;
                              ^
